css: page alignment fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -101,7 +101,7 @@ body {
 
 @layer components {
   .page {
-    @apply w-full md:w-[65%] mx-auto h-full min-h-[82.2vh] py-2 px-4 md:px-2 md:py-4;
+    @apply w-full md:w-[65%] mx-auto h-full min-h-[calc(100dvh-44px)] py-2 px-4 md:px-2 md:py-4;
   }
 
   .home-introduction {
